# Notes-RAG-Alchemist

./: .gitignore  README.md  compiler.py  demo.md  embedding_indexer.py  embeddings.py  ocr_probe.py  openai_api_key_test.py  pdf_utils.py  planner_agent.py  pyproject.toml  test_embeddings.py  test_metadata_and_thresholds.py  test_pdf_utils_ocr.py  test_planner_live.py  test_retriever_integration.py  test_retriever_unit.py  test_utils.py  vector_store.py
demo/: demo.md
interaction_logs/code_assist_chats/: codex_1.txt  codex_2.txt  codex_3.md  gemini_1.txt  gemini_10.txt  gemini_11.txt  gemini_2.txt  gemini_3.txt  gemini_4.txt  gemini_5.txt  gemini_6.txt  gemini_7.txt  gemini_8.txt  gemini_9.txt
interaction_logs/dev_chats/: dev_chats.md
src/: app.py
src/prompts/: planner_prompt.txt
src/tests/: ocr_probe.py  openai_api_key_test.py  test_compiler.py  test_embeddings.py  test_metadata_and_thresholds.py  test_pdf_utils_ocr.py  test_pinecone_query_namespace.py  test_planner_unit.py  test_utils.py  test_vector_store_local.py
src/utils/: __init__.py  pdf_utils.py  pinecone_compat.py
src/workers/: retriever.py
