[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lecture_agent"            # any valid name
version = "0.1.0"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["utils", "workers", "planner"]   # expose these as packages
